--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+/* General */
+* {
+  -moz-border-radius: 0 !important;
+   border-radius: 0 !important;
+}
 html, body {
-	
     height:100%;
     width: 100%;
     background-color: #111727 !important;
@@ -10,16 +14,30 @@ html, body {
 	line-height: 23px   !important;
     font-family: 'Roboto', sans-serif !important;   
 }
-
-a:active {
-	color: #8a8993  !important;
-    outline: none  !important;
-    outline: none  !important;
-	text-decoration: none  !important;
+code{
+	padding:  5px;
+	color:#00F000;
+	background-color:#262626;
 }
 
+/* Element Positioning */
+.justify{text-align:justify;}
+.vertical-alignment-helper {
+    display:table !important;
+    height: 100% !important;
+    width: 100% !important;
+}
+.vertical-align-center {
+    /* To center vertically */
+    display: table-cell !important;
+    vertical-align: middle !important;
+}
+.center{text-align:center;}
+.top_space{margin-top: 70px;}
+
+/* Links */
 a {
-	color: #8a8993 !important;
+	color: #fff !important;
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif !important;
 	transition: all 0.3s ease-in-out;
@@ -27,39 +45,42 @@ a {
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
 }
-
+a:active {
+	color: #8a8993  !important;
+    outline: none  !important;
+	text-decoration: none  !important;
+}
 a:hover {
 	text-decoration: none !important;
-	color: #fff !important;
+	color: #158888 !important;
 }
-
 a:focus {
-outline: none !important;
+	outline: none !important;
 }
 
-
-
+/* Navigation */
+.nav-active {
+	text-decoration: none !important;
+	color: #158888 !important;
+}
 .navbar-nav {
-  width: 100%;
-  text-align: center;
+	width: 100%;
+	text-align: center;
 }
 .navbar-nav > li {
-  float: none;
-  display: inline-block;
+	float: none;
+	display: inline-block;
 }
-
 .navbar-header {
-    float: none;
+	float: none;
 	text-align: center;
-	padding: 25px !important;
+	padding: 25px 25px 0px 25px !important;
 }
-
 .navbar-brand {
     float: none;
     padding: 25px !important;
     height: 80px !important;
 }
-
 .navbar-default {
     background-color: #111727;
 	border: 6px solid;
@@ -68,26 +89,62 @@ outline: none !important;
 	border-right: none  !important;
     border-color: #1d4c54;
 }
-
 .navbar-default .navbar-nav>li>a {
     color: #8a8993;
 }
-
 .navbar-default .navbar-nav>li.current {
     color: #fff  !important;
 }
-
 .navbar-default .navbar-nav>li>a:hover {
     color: #fff;
 }
 
-* {
-  border-radius: 0 !important;
-  -moz-border-radius: 0 !important;
+/* Elements */
+.circle01 {
+	padding-top: 43px;
+	background-color: #1d4c54;
+	border-radius: 50% !important;
+	height: 110px;
+	width: 110px;
+	font-family: FontAwesome !important;
+	text-align: center;
+	color: #fff;
+	font-size: 50px;	
+	margin: 0 auto;
+}
+.linie_blue {
+	
+	height: 5px;
+	width: 220px;
+	background-color: #1d4c54;
+	margin-top: 10px;
+	margin-bottom: 30px;
+}
+.linie_blue_center {
+	margin: auto;
+	height: 5px;
+	width: 220px;
+	background-color: #1d4c54;
+	margin-top: 10px;
+	margin-bottom: 30px;
+}
+.linie_blue_full {
+	height: 1px;
+	width: 100%;
+	background-color: #1d4c54;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+.linie_white_center {
+	margin: auto;
+	height: 5px;
+	width: 220px;
+	background-color: #fff;
+	margin-top: 10px;
+	margin-bottom: 30px;
 }
 
-
-
+/* Download Modals */
 .modal-content {
 
     background-color: #1d4c54 !important;
@@ -100,21 +157,10 @@ outline: none !important;
     margin: 0 auto !important;
 
 }
+.modal {}
 
-.modal {
-}
-.vertical-alignment-helper {
-    display:table !important;
-    height: 100% !important;
-    width: 100% !important;
-}
-.vertical-align-center {
-    /* To center vertically */
-    display: table-cell !important;
-    vertical-align: middle !important;
-}
-
-
+/* Headings */
+hr {color: #596a7b;border-color: #596a7b;background-color: #596a7b;}
 h1 {    
 	text-transform: uppercase;
     color: #fff;
@@ -123,24 +169,24 @@ h1 {
     font-size: 32px !important;
     padding-bottom: 5px;
 }
-
 h2 {    
 	text-transform: uppercase;
-    color: #fff;
     font-family: 'Roboto', sans-serif;
 	font-weight: 100 !important;
     font-size: 45px !important;
     padding-bottom: 5px;
+	color:#fff;
+	margin-top:10px;
 }
-
 h3 {    
+	text-align:left;
 	text-transform: uppercase;
-    color: #000;
     font-family: 'Roboto', sans-serif;
 	font-weight: 100 !important;
-    font-size: 15px !important;
+    font-size: 32px !important;
+    padding-bottom: 5px;
+	color:#fff;
 }
-
 h4 {    
 	text-transform: uppercase;
     color: #fff;
@@ -148,11 +194,9 @@ h4 {
 	font-weight: 100 !important;
     font-size: 15px !important;
 }
-
 h4 > br {
 	line-height: 2px  !important;
 }
-
 .headline {    
 	text-align: center;
 	text-transform: uppercase;
@@ -165,72 +209,37 @@ h4 > br {
 }
 
 
-.blank_section {
-	height: 220px;
+
+
+
+
+
+.navspacer{display:none;	position: relative;
+	padding-top: 180px;
+   }
+.nav-section-vis{  
+	position: relative;
+	padding-top: 255px;
+    height: 255px;
 }
 
-
-.linie_blue {
-	
-	height: 5px;
-	width: 220px;
-	background-color: #1d4c54;
-	margin-top: 10px;
-	margin-bottom: 30px;
-}
-
-.linie_blue_center {
-	margin: auto;
-	height: 5px;
-	width: 220px;
-	background-color: #1d4c54;
-	margin-top: 10px;
-	margin-bottom: 30px;
-}
-
-.linie_blue_full {
-	height: 1px;
-	width: 100%;
-	background-color: #1d4c54;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-.linie_white_center {
-	margin: auto;
-	height: 5px;
-	width: 220px;
-	background-color: #fff;
-	margin-top: 10px;
-	margin-bottom: 30px;
-}
-
+/* Sections */
 .section1 {  
-	top: 15px;
 	position: relative;
 	padding-top: 180px;
-	
     height: auto !important;
-    min-height:800px;
-	max-height: 850px;
+    min-height:940px;
+	max-height: 980px;
 	width: auto;
     overflow: hidden;
-	background-repeat: no-repeat!important;
-    background-position: center !important;
-    background-size: contain !important;
-	background-image: url(images/space_bg.jpg) !important;
-	
 }
-
 .section2 {  
 	position: relative;
     top: 15px;
     padding: 0px  !important;
     height: auto !important;
     overflow: hidden;
-	
 }
-
 .section3 {  
 	position: relative;
     top: 15px;
@@ -238,9 +247,7 @@ h4 > br {
 	background-color: #0c101d;
     overflow: hidden;
 	padding-bottom: 75px;
-	
 }
-
 .section4 {  
 	position: relative;
     top: 15px;
@@ -249,7 +256,6 @@ h4 > br {
     overflow: hidden;
 	padding-bottom: 75px;	
 }
-
 .section5 {  
 	min-height: 500px;
 	position: relative;
@@ -261,10 +267,9 @@ h4 > br {
 	background-repeat: no-repeat!important;
     background-position: center !important;
     background-size: cover !important;
-	background-image: url(images/space.jpg) !important;
+	background-image: url(../images/space.jpg) !important;
 	
 }
-
 .section6 {  
 	position: relative;
     top: 15px;
@@ -273,7 +278,6 @@ h4 > br {
     overflow: hidden;
 	padding-bottom: 75px;	
 }
-
 .section7 {  
 	min-height: 500px;
 	position: relative;
@@ -283,7 +287,6 @@ h4 > br {
     overflow: hidden;
 	padding-bottom: 75px;	
 }
-
 .section8 {  
 	min-height: 500px;
 	position: relative;
@@ -300,7 +303,7 @@ h4 > br {
 	background-repeat: no-repeat!important;
     background-position: center !important;
     background-size: contain !important;
-	background-image: url(images/rocket.png) !important;
+	background-image: url(../images/rocket.png) !important;
 }
 
 
@@ -319,7 +322,7 @@ h4 > br {
 	background-repeat: no-repeat!important;
     background-position: center !important;
     background-size: contain !important;
-	background-image: url(images/slack_btn.jpg) !important;
+	background-image: url(../images/slack_btn.jpg) !important;
 }
 
 .irc_btn {
@@ -333,7 +336,7 @@ h4 > br {
 	background-repeat: no-repeat!important;
     background-position: center !important;
     background-size: contain !important;
-	background-image: url(images/irc_btn.jpg) !important;
+	background-image: url(../images/irc_btn.jpg) !important;
 }
 
 .title {
@@ -359,24 +362,7 @@ h4 > br {
     color: #fff !important;	
 }
 
-.name_text {
-	text-align: center;
-	padding-top: 20px;
-	text-transform: uppercase;
-    color: #000 !important;
-    font-weight: 200 !important;
-	font-size: 23px;
-	
-}
 
-.title_text {
-	text-align: center;
-	padding-top: 5px;
-	text-transform: uppercase;
-    color: #000 !important;
-    font-family: 'Montserrat', sans-serif !important;
-	
-}
 
 
 
@@ -385,7 +371,8 @@ h4 > br {
 }
 
 .more_btn {
-	margin-top: 30px;
+	cursor:pointer;
+	margin-top: 20px;
 	text-transform: uppercase;
     color: #fff !important;
     font-family: 'Montserrat', sans-serif !important;
@@ -410,12 +397,13 @@ h4 > br {
 
 }
 
-#list_space > br {
+.list_space > br {
 	line-height: 40px !important;	
 	margin: 10px 0 !important;
 }
 
 .btn0 {
+	cursor:pointer;
 	text-align: center;
 	margin: auto;
 	margin-top: 30px;
@@ -523,7 +511,6 @@ h4 > br {
 	color: #fff;
 	font-size: 20px;			
 }
-
 .btn_t {
 	margin-right: 15px;
 	float: left;
@@ -538,7 +525,6 @@ h4 > br {
 	font-size: 20px;	
 	
 }
-
 .btn_r {
 	float: left;
 	background-color: #fff;
@@ -615,9 +601,28 @@ color: #f00;
 	background-repeat: no-repeat!important;
     background-position: right bottom !important;
     background-size: contain !important;
-	background-image: url(images/poly_bg.gif) !important;
+	background-image: url(../images/poly_bg.gif) !important;
 }
 
+
+/* Team Section */
+.name_text {
+	text-align: center;
+	padding-top: 20px;
+	text-transform: uppercase;
+    color: #000 !important;
+    font-weight: 200 !important;
+	font-size: 23px;
+	
+}
+.title_text {
+	text-align: center;
+	padding-top: 5px;
+	text-transform: uppercase;
+    color: #000 !important;
+    font-family: 'Montserrat', sans-serif !important;
+	
+}
 .team_pic {
 	margin: auto;
 	padding-top: 43px;
@@ -630,34 +635,30 @@ color: #f00;
     background-size: cover !important;
 	
 }
-
 .tm01 {
-	background-image: url(images/tp_01.jpg) !important;	
+	background-image: url(../images/tp_01.jpg) !important;	
 }
 .tm02 {
-	background-image: url(images/tp_02.jpg) !important;	
+	background-image: url(../images/tp_02.jpg) !important;	
 }
 .tm03 {
-	background-image: url(images/tp_03.jpg) !important;	
+	background-image: url(../images/tp_03.jpg) !important;	
 }
 .tm04 {
-	background-image: url(images/tp_04.jpg) !important;	
+	background-image: url(../images/tp_04.jpg) !important;	
 }
 .tm05 {
-	background-image: url(images/tp_05.jpg) !important;	
+	background-image: url(../images/tp_05.jpg) !important;	
 }
 .tm06 {
-	background-image: url(images/tp_06.jpg) !important;	
+	background-image: url(../images/tp_06.jpg) !important;	
 }
 .tm07 {
-	background-image: url(images/tp_07.jpg) !important;	
+	background-image: url(../images/tp_07.jpg) !important;	
 }
 .tm08 {
-	background-image: url(images/tp_08.jpg) !important;	
+	background-image: url(../images/tp_08.jpg) !important;	
 }
-
-
-
 .team_text {
 	min-height: 170px;	
 	padding-left: 10px;
@@ -666,20 +667,10 @@ color: #f00;
 
 
 
-.circle01 {
-	padding-top: 43px;
-	background-color: #1d4c54;
-	border-radius: 50% !important;
-	height: 110px;
-	width: 110px;
-	font-family: FontAwesome !important;
-	text-align: center;
-	color: #fff;
-	font-size: 50px;	
-	
-}
 
+/* Downloads */
 .circle02 {
+	cursor:pointer;
 	text-align: center !important;
 	margin: auto;
 	padding-top: 43px;
@@ -688,16 +679,13 @@ color: #f00;
 	height: 115px;
 	width: 115px;
 	font-family: FontAwesome !important;
-	text-align: center;
 	color: #fff;
 	font-size: 47px;	
 	border-color: #1d4c54;
 	border-width: 2px;
 }
 
-.top_space{
-	margin-top: 70px;
-}
+
 
 .text_holder {
 	padding-bottom: 50px;
@@ -731,7 +719,6 @@ color: #f00;
 	color: #fff;
 }
 
-
 .footer_last{
 	color: #2a616a;
 	position: relative;
@@ -743,15 +730,11 @@ color: #f00;
 	font-size: 12px;
 }
 
-@media only screen and (max-width: 1200px) {
-	
-	.btn4 {
-	margin-bottom: 105px;
 
-	
+/* Resolution specific styling adjustments */
+@media only screen and (max-width: 1200px) {	
+	.btn4 {margin-bottom: 105px;}
 }
-}
-
 @media only screen and (max-width: 992px) {
 	
 		.section5 {
@@ -767,31 +750,32 @@ color: #f00;
 text-align: center;
 }
 	
-	.btn_f {
+/* Community Section */	
+.btn_f {
 	margin-right: 25px;
 	padding-top: 23px;
 	height: 65px;
 	width: 65px;
 	font-size: 30px;			
 }
-		.btn_t {
+.btn_t {
 	margin-right: 25px;
 	padding-top: 23px;
 	height: 65px;
 	width: 65px;
 	font-size: 30px;				
 }
-		.btn_r {
+.btn_r {
 	padding-top: 20px;
 	height: 65px;
 	width: 65px;
 	font-size: 30px;				
 }
 	
-	.btn_row {
+.btn_row {
 		width: 250px;
 		margin: auto;
-	}
+}
 	
 		.btn4 {
 	text-align: center;
@@ -843,12 +827,6 @@ text-align: center;
 }
 	
 }
-
-
-
-
-
-
 @media only screen and (max-width: 768px) {
 	
 
@@ -857,11 +835,7 @@ text-align: center;
 	height: 350px;
 	}
 	
-	
-	
-	.blank_section {
-	height: 100px;
-}
+
 	.linie_blue {
 	margin-top: 18px;
 	margin-bottom: 30px;
@@ -908,7 +882,6 @@ text-align: center;
 }
 	
 }
-
 @media only screen and (max-width: 320px) {
 	
 	.video_holder {
@@ -921,3 +894,96 @@ text-align: center;
 	margin-left: -5px;
 }
 }
+
+
+video {
+    position: absolute; 
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+	min-width:100%;
+	min-height:100%;
+    width: auto; 
+    height: auto; 
+    z-index: 0;
+   object-fit: cover;
+    
+}
+.navbar{ margin-bottom:0px;}
+#shapebg{background-repeat: no-repeat!important;
+    background-position: center !important;
+    background-size: contain !important;
+	background-image: url(../images/geometry.png) !important;
+	width: auto;
+	height:750px;
+	/* opacity: 0.7;
+     filter: alpha(opacity=70); */
+	margin-top:-100px;
+	padding-top:180px;
+	position:relative;}
+	#shapebg_header{background-repeat: no-repeat!important;
+    background-position: center !important;
+    background-size: contain !important;
+	background-image: url(../images/header_layer.png) !important;
+	width: auto;
+	height:750px;
+	/* opacity: 0.7;
+     filter: alpha(opacity=70); */
+	margin-top:-100px;
+	padding-top:180px;
+	position:relative;}
+.main_text,.main_text2{color:#ddd;}
+.panel-transparent {
+	background: none;
+	color:#fff;
+	border:1px dotted rgba(255, 255, 255, 0.4);
+	cursor:pointer;
+	
+}
+
+    .panel-transparent .panel-heading{
+        background: rgba(0, 128, 128, 0.4)!important;	color:#fff;font-weight:bold;;
+		
+    }
+
+    .panel-transparent .panel-body{
+        background: rgba(0, 0, 0, 0.6)!important; padding:30px; min-height:160px;
+    }
+	#main_text{margin-top:30px;}
+	
+	
+.page{
+background-color:#000;	
+color:#fff;
+}
+.page td {text-align:center; font-size:12px;font-weight:normal; padding:5px;}
+
+.nlist li {
+     display:inline-block;  
+	  white-space: nowrap;margin-bottom: 20px;
+}
+
+.nlist  li a {
+    background-color:#1d4c54;
+    color: black;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 4px 4px 0 0;
+}
+
+.nlist  li a:hover {
+    color: #1d4c54;
+}
+
+/* Header */
+.slogan{margin-top:5px;margin-left:7px;font-style: italic;}
+
+/* Footer */
+
+
+.mtop25{margin-top:25px;}
+.feature_text{border:none;border-top:#000 dotted 1px;text-align:center; text-decoration:none;}
+
+/* Documentation */
+.doc_title{text-align:center;color:#00D0D0 !important;}
+.circle01 .fa,.circle02 .fa  { line-height: inherit;}
