Add Team Member

--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,9 @@ h4 > br {
 .tm08 {
 	background-image: url(../images/tp_08.jpg) !important;	
 }
+.tm09 {
+	background-image: url(../images/tp_09.jpg) !important;	
+}
 .team_text {
 	min-height: 170px;	
 	padding-left: 10px;
